# src/main/java/com/itau/pix/application/operacoes/inclusao/PixApiInclusaoController.java
@@ -1,0 +1,28 @@
+package com.itau.pix.application.operacoes.inclusao;
+
+
+import com.itau.pix.application.operacoes.inclusao.impl.PixInclusaoService;
+import com.itau.pix.domain.CadastroChavesPix;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.UUID;
+
+@RequiredArgsConstructor(onConstructor_ = @__(@Autowired))
+@RestController
+public class PixApiInclusaoController {
+
+  private final PixInclusaoService pixInclusaoService;
+
+  @PostMapping("/cadastro")
+  public ResponseEntity<UUID> incluir(@RequestBody @Valid CadastroChavesPix cadastroChavesPix) {
+    UUID uuid = pixInclusaoService.incluirChave(cadastroChavesPix);
+    return ResponseEntity.ok(uuid);
+  }
+
+}
