# src/main/java/com/itau/pix/infrastructure/repository/inclusao/IncluirStorage.java
@@ -1,0 +1,16 @@
+package com.itau.pix.infrastructure.repository.inclusao;
+
+
+import com.itau.pix.domain.enums.SituacaoChave;
+
+import java.util.UUID;
+
+public interface IncluirStorage {
+
+  int countByIdCorrentistaAndNumeroAgenciaAndNumeroConta(String idCorrentista, int numeroAgencia, long numeroConta);
+
+  UUID incluir(com.itau.pix.domain.CadastroChavesPix cadastroChavesPix);
+
+  boolean existsByIdAndSituacaoChave(UUID id, SituacaoChave situacaoChave);
+
+}
